<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent"
              tools:context=".fragment.LoginFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="vertical">
        <EditText android:id="@+id/phone"
                  android:layout_width="300dp"
                  android:layout_height="wrap_content"
                  android:maxLines="1"
                  android:minLines="1"
                  android:maxLength="11"
                  android:textSize="@dimen/inputhint"
                  android:inputType="number"
                  android:minHeight="48dp"
                  android:background="@drawable/inputtext_bg"
                  android:paddingLeft="10dp"
                  android:layout_marginTop="15dp"
                  android:textColorHint="@color/DarkKhaki"
                  android:textColor="@color/Tomato"
                  android:hint="@string/inputphone"/>
        <LinearLayout android:layout_width="300dp"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:layout_gravity="center"
                      android:orientation="horizontal"
        >
            <EditText android:id="@+id/code"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="3"
                      android:maxLines="1"
                      android:minLines="1"
                      android:maxLength="4"
                      android:textSize="@dimen/inputhint"
                      android:minHeight="48dp"
                      android:inputType="number"
                      android:layout_gravity="center"
                      android:background="@drawable/inputtext_bg"
                      android:paddingLeft="10dp"
                      android:textColorHint="@color/DarkKhaki"
                      android:textColor="@color/Tomato"
                      android:hint="@string/inputcode"/>
            <Button android:id="@+id/getcode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/btn_style"
                    android:text="@string/getcode"
                    android:padding="0dp"
            />
        </LinearLayout>

        <EditText android:id="@+id/password"
                android:layout_width="300dp"
                  android:layout_height="wrap_content"
                  android:maxLines="1"
                  android:minLines="1"
                  android:textSize="@dimen/inputhint"
                  android:minHeight="48dp"
                  android:background="@drawable/inputtext_bg"
                  android:layout_marginTop="5dp"
                  android:paddingLeft="10dp"
                  android:inputType="textPassword"
                  android:textColorHint="@color/DarkKhaki"
                  android:textColor="@color/Tomato"
                  android:hint="@string/inputpassword"/>

        <EditText android:id="@+id/enterpassword"
                  android:layout_width="300dp"
                  android:layout_height="wrap_content"
                  android:maxLines="1"
                  android:inputType="textPassword"
                  android:minLines="1"
                  android:textSize="@dimen/inputhint"
                  android:minHeight="48dp"
                  android:background="@drawable/inputtext_bg"
                  android:layout_marginTop="5dp"
                  android:paddingLeft="10dp"
                  android:textColorHint="@color/DarkKhaki"
                  android:textColor="@color/Tomato"
                  android:hint="@string/enterpassword"/>


        <LinearLayout android:layout_width="300dp"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <CheckBox android:id="@+id/yinsi1"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/DoderBlue"
                      android:button="@null"
                      android:drawableStart="@drawable/checkbo_style"
                      android:text="《隐私保护策略》"/>
            <CheckBox android:id="@+id/yinsi2"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:button="@null"
                      android:drawableStart="@drawable/checkbo_style"
                      android:textColor="@color/DoderBlue"
                      android:text="《软件使用协议》"/>
        </LinearLayout>
        <Button android:id="@+id/resbtn" android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="@dimen/inputhint"
                android:background="@drawable/btn_style"/>


    </LinearLayout>

</LinearLayout>